// replication test of go-plugin key-value store plugin

syntax = "proto3";

package keystore;

// the get request
message GetRequest {
	string key = 1;
}

message GetResponse {
	bytes value = 1;
}

message PutRequest {
	string key = 1;
	bytes value = 2;
}

message Empty {}

// the key store service definition
service KeyStore {
	rpc Get (GetRequest) returns (GetResponse);
	rpc Put (PutRequest) returns (Empty);

}
